<resources>
    <string name="app_name">ShopMobileTask</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>/>
    <string name="heart">Heart</string> />
    <string name="cart"> Cart</string>/>
    <string name="message">Message</string> />
    <string name="profile">Profile</string>
    <string name="welcome_back">Welcome back</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="log_in">Log in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
    <string name="log_out">Log out</string>
    <string name="change_photo">Change photo</string>
    <string name="satria_adhi_pradana">Satria Adhi Pradana</string>
    <string name="upload_item">Upload item</string>
    <string name="trade_store">Trade store</string>
    <string name="payment_method">Payment method</string>
    <string name="balance">Balance</string>
    <string name="money">$ 1593</string>
    <string name="trade_history">Trade history</string>
    <string name="restore_purchase">Restore purchase</string>
    <string name="help">Help</string>
    <string name="trade_by_bata">Trade by bata</string>
    <string name="location">Location</string>
    <string name="what_are_you_looking_for">What are you looking for ?</string>
    <string name="phones">Phones</string>
    <string name="console">Console</string>
    <string name="Games">Games</string>
    <string name="_90000">$ 90000</string>
    <string name="playstation_5_console">PlayStation 5 console</string>
    <string name="latest">Latest</string>
    <string name="view_all">View all</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="kids">Kids</string>
    <string name="new_balance_sneakers">New balance sneakers</string>
    <string name="money_flash">$ 33,00</string>
</resources>