<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_Sign_in"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="151dp"
        android:fontFamily="serif"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/sign_in_first_name"
        android:layout_width="289dp"
        android:layout_height="29dp"
        android:background="@drawable/shape_form"
        android:gravity="center"
        android:layout_marginTop="259dp"
        android:hint="@string/first_name"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/sign_in_last_name"
        android:layout_width="289dp"
        android:layout_height="29dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/shape_form"
        android:gravity="center"
        android:hint="@string/last_name"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_first_name" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/sign_in_email"
        android:layout_width="289dp"
        android:layout_height="29dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/shape_form"
        android:gravity="center"
        android:hint="@string/email"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_last_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="289dp"
        android:layout_height="46dp"
        android:layout_marginTop="451dp"
        android:background="@drawable/shape_button"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sign_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="512dp"
        android:text="@string/already_have_an_account"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/sign_in_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sign_in_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="512dp"
        android:layout_marginStart="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/log_in"
        android:textColor="@color/login_link"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/google_logo"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="598dp"
        android:src="@drawable/google"
        app:layout_constraintEnd_toStartOf="@+id/sign_in_google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/apple_logo"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="660dp"
        android:src="@drawable/apple"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sign_in_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="604dp"
        android:text="@string/sign_in_with_google"
        android:textSize="12sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="664dp"
        android:text="@string/sign_in_with_apple"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>