<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="11dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_console"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/console" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_fab"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_below="@id/iv_console"
        android:layout_marginStart="90dp"
        android:layout_marginTop="-25dp"
        android:src="@drawable/fab" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_console"
        android:layout_width="35dp"
        android:layout_height="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="31dp"
        android:gravity="center"
        android:background="@drawable/shape_form"
        android:elevation="10dp"
        android:text="@string/Games"
        android:textSize="6sp"
        tools:ignore="SmallSp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_name_console"
        android:layout_width="75dp"
        android:layout_height="26dp"
        android:elevation="10dp"
        android:text="@string/playstation_5_console"
        android:textColor="@color/white"
        android:textSize="9sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="105dp"
        android:layout_marginBottom="31dp"
        android:textStyle="bold"
        tools:ignore="SmallSp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_90000"
        android:layout_marginStart="16dp"
        android:layout_marginTop="130dp"
        android:textColor="@color/white"
        android:textSize="7sp"
        android:textStyle="bold"
        tools:ignore="SmallSp" />
</RelativeLayout>