<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_arrow_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="60dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="63dp"
            android:gravity="center"
            android:text="@string/profile"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/profile_image"
            android:layout_width="61dp"
            android:layout_height="61dp"
            android:layout_gravity="center"
            android:layout_marginTop="96dp"
            android:scaleType="centerCrop"
            android:src="@drawable/photo_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_change_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="163dp"
            android:text="@string/change_photo"
            android:textColor="@color/gray_change"
            android:textSize="8sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SmallSp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_name_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="190dp"
            android:text="@string/satria_adhi_pradana"
            android:textColor="@color/name_color"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_upload_item"
            android:layout_width="290dp"
            android:layout_height="40dp"
            android:background="@drawable/shape_button"
            android:drawableStart="@drawable/upload_shape"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:layout_marginTop="242dp"
            android:text="@string/upload_item"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_trade_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="308dp"
            android:src="@drawable/credit_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/credit_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_trade_store"
            tools:ignore="ContentDescription" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/credit_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_payment"
            tools:ignore="ContentDescription" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_trade_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/credit_card"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_balance"
            tools:ignore="ContentDescription" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="309dp"
            android:layout_marginStart="100dp"
            android:text="@string/trade_store"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_method"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_balance_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="168dp"
            android:layout_marginTop="36dp"
            android:text="@string/money"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/tv_balance"
            app:layout_constraintTop_toBottomOf="@+id/img_arrow_payment" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_trade_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trade_history"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_balance" />

        <ImageView
            android:id="@+id/img_arrow_restore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="248dp"
            android:src="@drawable/arrow_right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_upload_item"
            tools:ignore="ContentDescription" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_arrow_trade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_right"
            android:layout_marginTop="312dp"
            android:layout_marginStart="166dp"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_arrow_trade_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="192dp"
            android:src="@drawable/arrow_right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_upload_item"
            tools:ignore="ContentDescription" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_arrow_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="132dp"
            android:layout_marginTop="368dp"
            android:src="@drawable/arrow_right"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_restore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/restore"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_trade_history"
            tools:ignore="ContentDescription" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_restore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restore_purchase"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_trade_history" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/help"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_restore"
            tools:ignore="ContentDescription" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/log_out"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_help"
            tools:ignore="ContentDescription" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_restore" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="33dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_help" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            app:labelVisibilityMode="unlabeled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/nav_menu" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>