<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Page_1Fragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="54dp"
        android:src="@drawable/grid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_trade_by_bata"
        android:layout_width="144dp"
        android:layout_height="23dp"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/trade_by_bata"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/photo_page1"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="47dp"
        android:scaleType="centerCrop"
        android:src="@drawable/photo_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/location"
        android:layout_width="42dp"
        android:layout_height="13dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="45dp"
        android:text="@string/location"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/location_spinner"
        android:layout_width="4dp"
        android:layout_height="6dp"
        android:layout_marginTop="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toEndOf="@+id/location"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/search_page_1"
        android:layout_width="262dp"
        android:layout_height="24dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/shape_form"
        android:gravity="center"
        android:hint="@string/what_are_you_looking_for"
        android:textSize="9sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/search_icon"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/search"
        app:layout_constraintBottom_toBottomOf="@+id/search_page_1"
        app:layout_constraintEnd_toEndOf="@+id/search_page_1" />


</androidx.constraintlayout.widget.ConstraintLayout>